fixed crafting window height with small recipes on firefox

--- a/css.css
+++ b/css.css
@@ -210,7 +210,6 @@
   top: min(2vh,1vw);
   left: min(2vh,1vw);
   width: min(48vh,24vw);
-  height: min(42vh,21vw);
   max-height: min-content;
   border-radius: min(2vh,1vw);
   border: min(0.5vh,0.25vw) solid var(--main-border-color);
@@ -308,8 +307,8 @@
 }
 #newCraftingRecipeHolder {
   width: 100%;
-  height: min(29.2vh,14.6vw);
-  max-height: min-content;
+  height: min-content; 
+  max-height: min(29.2vh,14.6vw);
   overflow: auto;
   line-height: 100%;
   border-top: min(0.4vh,0.2vw) solid var(--main-border-color);
@@ -317,6 +316,12 @@
   z-index: 20;
   padding-bottom: 0vw;
   display: block;
+}
+.unfoldedRecipeHolder {
+  max-height: max-content !important
+}
+.foldedRecipeHolder {
+  max-height: min(29.2vh, 14.6vw) !important;
 }
 #pinAndCraft {
   width: 100%;
